# llm

./: .env.example  .experimentrc  .gitignore  .gitmodules  ADAPTER_REGISTRY.md  ADVERSARIAL_REVIEW.md  AGENTS.md  ARCHITECTURE.md  ARCHIVE.yml  CLAUDE.md  CODING_GUIDELINES.md  EXPERIMENT.md  FINDINGS.md  GAMEPLAN.md  GPU_CODING_GUIDELINES.md  HYPOTHESES.yml  IDEA-AFMEI.md  IDEA-EXPERT-LIFECYCLE.md  IDEA-META-OPTIMIZER.md  IDEA-X.md  IDEA.md  LOOPHOLES_PROMPT.md  LORA_COMPOSITION_RESEARCH.md  NEXT_CYCLE_COMMANDS.md  ORCHESTRATION_PLAN.md  PHASE1_SPEC.md  PLAN-1-foundation.md  PLAN-2-training.md  PLAN-3-joint-router.md  PLAN-4-specialization.md  PLAN-5-vit-lora.md  PLAN-6-shared-experts.md  PLAN-7-hierarchical.md  PLAN-AFMEI.md  PLAN-EXPERT-LIFECYCLE.md  PLAN-META-OPTIMIZER.md  PLAN-stitch.md  PLAN.md  PROMPT.md  README.md  (+44 more)
.ralph/: current-events  current-loop-id  current_direction.md  current_loophole_target.md  events-20260303-225746.jsonl  events-20260303-230929.jsonl  events-20260304-001606.jsonl  events-20260304-082134.jsonl  events-20260304-153514.jsonl  events-20260304-203914.jsonl  events-20260305-051917.jsonl  events-20260305-085314.jsonl  events-20260305-103839.jsonl  events-20260306-164640.jsonl  events-20260306-213546.jsonl  events-20260307-005153.jsonl  events-20260307-093022.jsonl  events-20260307-113114.jsonl  events-20260310-235505.jsonl  events-20260311-001028.jsonl  events-20260311-001217.jsonl  events-20260311-085425.jsonl  events-20260311-154006.jsonl  events-20260311-213913.jsonl  events-20260312-234221.jsonl  events-20260313-020737.jsonl  events-20260313-080947.jsonl  events-20260313-121407.jsonl  events-20260313-141730.jsonl  events-20260313-160955.jsonl  events-20260314-011038.jsonl  events-20260314-124924.jsonl  events-20260314-164226.jsonl  events-20260314-230743.jsonl  events-20260315-085312.jsonl  events-20260315-131246.jsonl  events-20260315-195205.jsonl  events-20260315-230042.jsonl  events-20260316-090104.jsonl  events-20260317-003129.jsonl  (+21 more)
adapters/: registry.json
archive/: ablation.py  ablation_results.csv
brainstacks/: README.md  REPRODUCTION_NOTES.md  requirements.txt
composer/: bench.py  compose.py  distill.py  evolve.py  orthogonality.py  rank_sweep.py  runpod_exec.py
dc_merge/: README.md  REPRODUCTION_NOTES.md  __init__.py  requirements.txt
docs/: MLX_GEMMA4_GUIDE.md  per_hat_agents_behavior.md  ralph_experiment_workflow.md  ralph_hat_design_guidance.md  research_brief_lod_adaptive_capacity.md  research_synthesis_5_topics.md
dume/: README.md  REPRODUCTION_NOTES.md  requirements.txt
examples/: 01_switch_routing.py  02_expert_choice_routing.py  03_scattermoe_parallel.py  04_redo_dormant_reinit.py  05_hc_smoe_merging.py  06_mc_smoe_grouping.py  07_reap_saliency.py  08_dynmoe_grow_shrink.py  09_xlora_gating.py  10_mole_lora_mixture.py  11_drop_upcycling.py  12_moe_prompt_cl.py  README.md  RESEARCH_hf_moe_ecosystem.md  RESEARCH_mlx_pytorch_translation.md
fisher_rao_merging/: README.md  REPRODUCTION_NOTES.md  requirements.txt
lgme/: __init__.py  art.py  autograd.py  data.py  diagnostics.py  eval.py  evolution.py  ewc.py  freeze.py  graph.py  model.py  optimizer.py  router.py  si.py  som.py
macro/: RUNPOD_QUEUE.md  __init__.py  api.py  batched_lora_latency.py  compose_e2e_test.py  data.py  eval.py  models.py  (+8 more)
(+5577 files in other folders)
