[project]
name = "lora-compose"
version = "0.2.0"
description = "Plug-and-Play LoRA Composition — orthogonality-guaranteed expert MoE"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "datasets",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
serve = [
    "vllm>=0.15",
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
]
runpod = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "scipy",
    "scikit-learn",
]

[project.scripts]
compose = "tools.compose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macro", "micro", "tools"]
