[project]
name = "lora-compose"
version = "0.3.0"
description = "Living Composable Model — orthogonality-guaranteed LoRA expert composition"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "python-dotenv",
    "numpy",
    "autograd>=1.8.0",
    "scipy>=1.17.1",
    "ripser>=0.6.14",
    "sentence-transformers>=5.3.0",
    "mlx-lm>=0.31.2",
    "lm-eval[api]>=0.4.11",
    "peft>=0.18.1",
]

[project.optional-dependencies]
micro = [
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "datasets",
]
train = [
    "unsloth[colab-new]",
    "trl>=0.15",
    "peft>=0.13",
    "transformers>=4.45",
    "torch>=2.4",
    "datasets",
    "accelerate",
    "bitsandbytes",
]
serve = [
    "vllm>=0.15",
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
]
eval = [
    "lm-eval>=0.4",
]
serverless = [
    "httpx",
    "python-dotenv",
]

[project.scripts]
compose = "composer.compose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["composer", "micro", "macro"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
# `serve` extra requires vllm (transformers<5), conflicts with mlx-lm>=0.31.2 (transformers>=5).
# We override transformers for the lock; serve extra is only used in CUDA environments anyway.
override-dependencies = [
    "transformers>=5.5.0",
]
